CHE-9840 add factory events handling
Signed-off-by: Oleksii Orel <oorel@redhat.com>

--- a/che-theia-factory/package.json
+++ b/che-theia-factory/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@eclipse-che/workspace-client": "latest",
     "@theia/core": "0.3.12",
+    "@theia/editor": "0.3.12",
     "@theia/git": "0.3.12",
     "axios": "0.18.0"
   },
