--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,20 @@
 sudo: required
 language: node_js
-node_js: '8'
+node_js: '9'
 git:
   depth: 1
 cache:
   yarn: true
   directories:
-  - che-theia-factory/node_modules
+  - node_modules
 branches:
   only:
   - master
-  - /.*/
-env:
-  global:
-    - NODE_OPTIONS="--max_old_space_size=4096"
 before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.6.0
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- 
   - export PATH=$HOME/.yarn/bin:$PATH ;
-install: yarn install
-script: skip
+install: yarn
+script: yarn build
 jobs:
   fast_finish: true
   include:
@@ -26,22 +22,18 @@ jobs:
     os: linux
     before_deploy:
       - printf "//registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}\n" >> ~/.npmrc
-      - 
-    deploy: # WIP env variable is set only in the https://travis-ci.org/theia-demo-plugins/che-theia-factory-extension jobs
+      - npm version -no-git-tag-version "0.0.1-$(date +%s)"
+    deploy:
       - provider: script
-        script: echo "deploying master @eclipse-che" && cd che-theia-factory && npm version -no-git-tag-version "0.0.1-$(date +%s)" && npm publish --access public
+        script: npm publish --access public
         on:
-          all_branches: true
-          condition: "! -v WIP && ${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH} == 'master'"
+          branch: master
         skip_cleanup: true
-      - provider: script
-        script: echo "deploying all branches @wip-theia" && cd che-theia-factory && find -name "*.*" -type f -exec sed -i 's/\@eclipse-che\/theia-factory-extension/\@wiptheia\/theia-factory-extension/g' {} \; && npm version -no-git-tag-version "0.0.1-${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH}-$(date +%s)" && npm publish --access public
+      - provider: releases
+        api-key: $GITHUB_AUTH_TOKEN
+        name: backend-plugin-$(date +'%F-%T')
+        file_glob: true
+        file: ./*.theia
+        skip_cleanup: true
         on:
-          all_branches: true
-          condition: -v WIP
-        skip_cleanup: true
-      - provider: script
-        script: cd che-theia-factory && npm version -no-git-tag-version && npm publish --access public
-        on:
-          tags: true
-        skip_cleanup: true
+          branch: master
