--- a/package.json
+++ b/package.json
@@ -1,18 +1,38 @@
 {
-  "private": true,
-  "scripts": {
-    "prepare": "yarn tslint && lerna run prepare",
-    "rebuild:browser": "theia rebuild:browser",
-    "tslint-fix": "tslint --fix --project che-theia-factory",
-    "tslint": "tslint --project che-theia-factory"
-  },
+  "name": "@eclipse-che/theia-factory-plugin",
+  "keywords": [
+    "theia-plugin"
+  ],
+  "version": "0.0.1",
   "license": "EPL-2.0",
+  "files": [
+    "src"
+  ],
   "devDependencies": {
-    "lerna": "2.4.0",
-    "tslint": "5.10.0"
+    "@theia/plugin": "^0.4.0-next.ac580dd6",
+    "@theia/plugin-packager": "^0.0.1-1539891078",
+    "rimraf": "2.6.2",
+    "tslint": "5.10.0",
+    "typescript": "2.9.2",
+    "typescript-formatter": "7.2.2"
   },
-  "workspaces": [
-    "che-theia-factory",
-    "browser-app"
-  ]
+  "dependencies": {
+    "@eclipse-che/workspace-client": "latest",
+    "axios": "0.18.0"
+  },
+  "scripts": {
+    "prepare": "yarn run clean && yarn run build",
+    "clean": "rimraf lib",
+    "format-code": "tsfmt -r",
+    "watch": "tsc -watch",
+    "compile": "tsc",
+    "build": "yarn run format-code && yarn run compile && theia:plugin pack",
+    "tslint-fix": "tslint --fix --project ."
+  },
+  "engines": {
+    "theiaPlugin": "next"
+  },
+  "theiaPlugin": {
+    "backend": "lib/plugin-backend-plugin.js"
+  }
 }
