--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
         "target": "es5",
         "lib": [
             "es6",
-            "dom"
+            
+            
+            "webworker"
+            
         ],
         "sourceMap": true,
         "rootDir": "src",
